force-app/main/default/objects/DU_DeletionSetting__mdt/DU_DeletionSetting__mdt.object-meta.xml
<CustomObject>
    <label>Deletion Setting</label>
    <pluralLabel>Deletion Settings</pluralLabel>
</CustomObject>