force-app/main/default/objects/DU_DeletionSetting__mdt/fields/DU_Active__c.field-meta.xml
<CustomField>
    <fullName>DU_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Active flag</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>