force-app/main/default/objects/DU_DeletionSetting__mdt/fields/DU_ParentObject__c.field-meta.xml
<CustomField>
    <fullName>DU_ParentObject__c</fullName>
    <description>CDM: Parent Object name</description>
    <label>Parent Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>DU_Contract__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>