force-app/main/default/objects/DU_DeletionSetting__mdt/fields/DU_ParentObjectFieldName__c.field-meta.xml
<CustomField>
    <fullName>DU_ParentObjectFieldName__c</fullName>
    <description>CDM: Parent object API name on child record</description>
    <label>Parent Object Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>