force-app/main/default/objects/DU_DeletionSetting__mdt/fields/DU_RelatedListNameOnParentObject__c.field-meta.xml
<CustomField>
    <fullName>DU_RelatedListNameOnParentObject__c</fullName>
    <description>CDM: Child relationship name on parent object</description>
    <label>Related List Name On Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>